--- a/src/pages/styles/HomePage.css
+++ b/src/pages/styles/HomePage.css
@@ -39,7 +39,14 @@
 .product__container {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 4rem;
+  justify-content: center;
+  margin-right: 10rem;
+  margin-top: 2rem;
+}
+
+.home__category__price {
+  margin-top: 2rem;
 }
 
 
